--- a/10th_Lesson/Lesson10_OOP.ipynb
+++ b/10th_Lesson/Lesson10_OOP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "9a7e535a",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,10 @@
       "diff.shape is (12,)\n",
       "gradient.shape is (2,)\n",
       "\n",
-      "[4.99999997 2.00000001]\n"
+      "[4.99999997 2.00000001]\n",
+      "\n",
+      "[ 6.99999998 15.         19.00000001 10.99999999 17.00000001 15.\n",
+      " 12.99999999 10.99999999 19.00000001 15.          8.99999998  6.99999998]\n"
      ]
     }
    ],
@@ -25,23 +28,27 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "class LinearRegression:\n",
-    "    def __init__(self, alpha=0.001, iterations=10000):\n",
+    "    def __init__(self, alpha=0.001, iterations=100000):\n",
     "        self.alpha = alpha\n",
     "        self.iterations = iterations\n",
     "        self.w = None\n",
     "    \n",
     "    def fit(self, X, y):\n",
+    "        \n",
     "        n_samples, n_features = X.shape\n",
     "        print(f\"X.shape is {X.shape}\")\n",
     "        self.w = np.zeros(n_features)  \n",
     "        print(f\"w.shape is {self.w.shape}\")\n",
+    "        \n",
     "        for i in range(self.iterations):\n",
     "            h = X.dot(self.w)\n",
     "            diff = h - y\n",
     "            gradient = (1/n_samples) * diff.T.dot(X)\n",
     "            self.w = self.w - self.alpha * gradient\n",
+    "            \n",
     "        print(f\"diff.shape is {diff.shape}\")\n",
     "        print(f\"gradient.shape is {gradient.shape}\\n\")\n",
+    "        \n",
     "        return self.w\n",
     "    \n",
     "    def predict(self, X):\n",
@@ -57,35 +64,43 @@
     "\n",
     "    \n",
     "model = LinearRegression(alpha=0.001, iterations=100000)\n",
-    "    \n",
-    "df = pd.read_csv('../5th_Lesson/data/turboaz.csv')\n",
-    "df = df[['Buraxilish ili', 'Qiymet']].copy()\n",
-    "df2 = df.copy()\n",
-    "df['Qiymet'] = df['Qiymet'].apply(applyAZN)\n",
-    "df2['Qiymet'] = df2['Qiymet'].apply(applyAZN)\n",
-    "df['Buraxilish ili'] = (df['Buraxilish ili'] - df['Buraxilish ili'].mean()) / df['Buraxilish ili'].std()\n",
-    "df['Qiymet'] = (df['Qiymet'] - df['Qiymet'].mean())/df['Qiymet'].std()\n",
-    "\n",
-    "# x0 = np.ones(len(df))\n",
-    "x0 = np.ones(12)\n",
-    "\n",
-    "# inputs = np.array([x0, df['Buraxilish ili']]).T \n",
-    "    \n",
-    "# outputs = df['Qiymet']\n",
     "\n",
     "inputs = np.array([x0, [1, 5, 7, 3, 6, 5, 4, 3, 7, 5, 2, 1]]).T\n",
     "outputs = [7, 15, 19, 11, 17, 15, 13, 11, 19, 15, 9, 7]\n",
     "    \n",
     "final_coef = model.fit(inputs, outputs)\n",
     "\n",
-    "print(final_coef)\n",
+    "print(final_coef, end='\\n\\n')\n",
     "\n",
-    "# print(model.predict(inputs))"
+    "print(model.predict(inputs))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "df = pd.read_csv('../5th_Lesson/data/turboaz.csv')\n",
+    "\n",
+    "df = df[['Buraxilish ili', 'Qiymet']].copy()\n",
+    "df2 = df.copy()\n",
+    "\n",
+    "df['Qiymet'] = df['Qiymet'].apply(applyAZN)\n",
+    "df2['Qiymet'] = df2['Qiymet'].apply(applyAZN)\n",
+    "\n",
+    "df['Buraxilish ili'] = (df['Buraxilish ili'] - df['Buraxilish ili'].mean()) / df['Buraxilish ili'].std()\n",
+    "df['Qiymet'] = (df['Qiymet'] - df['Qiymet'].mean())/df['Qiymet'].std()\n",
+    "\n",
+    "# x0 = np.ones(len(df))\n",
+    "# x0 = np.ones(12)\n",
+    "\n",
+    "# inputs = np.array([x0, df['Buraxilish ili']]).T \n",
+    "    \n",
+    "# outputs = df['Qiymet']\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "4aabf582",
    "metadata": {},
    "outputs": [
@@ -106,7 +121,7 @@
        "Name: Qiymet, Length: 1328, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
